--- a/CleverHostel/ArrearsChecker/packages.config
+++ b/CleverHostel/ArrearsChecker/packages.config
@@ -1,17 +1,17 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Newtonsoft.Json" version="10.0.2" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net45" />
   <package id="Rx-Core" version="2.2.5" targetFramework="net461" />
   <package id="Rx-Interfaces" version="2.2.5" targetFramework="net461" />
   <package id="Rx-Linq" version="2.2.5" targetFramework="net461" />
   <package id="Rx-Main" version="2.2.5" targetFramework="net461" />
   <package id="Rx-PlatformServices" version="2.2.5" targetFramework="net461" />
   <package id="Rx-XAML" version="2.2.5" targetFramework="net461" />
-  <package id="System.Net.Http" version="4.3.1" targetFramework="net461" />
-  <package id="System.Security.Cryptography.Algorithms" version="4.3.0" targetFramework="net461" />
-  <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net461" />
-  <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net461" />
-  <package id="System.Security.Cryptography.X509Certificates" version="4.3.0" targetFramework="net461" />
+  <package id="System.Net.Http" version="4.3.1" targetFramework="net461" requireReinstallation="true" />
+  <package id="System.Security.Cryptography.Algorithms" version="4.3.0" targetFramework="net461" requireReinstallation="true" />
+  <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net461" requireReinstallation="true" />
+  <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net461" requireReinstallation="true" />
+  <package id="System.Security.Cryptography.X509Certificates" version="4.3.0" targetFramework="net461" requireReinstallation="true" />
   <package id="System.Windows.Interactivity.WPF" version="2.0.20525" targetFramework="net461" />
   <package id="WpfAutoCompleteControls" version="0.16" targetFramework="net461" />
 </packages>
